Adding routes & new home component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<h1>Bienvenidos al ED Taller :-)</h1>
+<mat-toolbar color="primary">
+  <span>Bienvenidos al ED Taller</span>
+</mat-toolbar>
 
 <router-outlet></router-outlet>
